2002-02-10  Manuel Guesdon <mguesdon@orange-concept.com>

	* Source/NSObject.m: changes to enable derived object KeyValueCoding 
		process chnages (EOGenericRecord for example).
               o added:
                _infoForInstanceVariableNamed:retType:retSize:retOffset:
                _getValueForKey:selector:type:size:offset:
                _setValueForKey:object:selector:type:size:offset:
                _handleQueryWithUnboundKey:
                _handleTakeValue:forUnboundKey:
               o modified:
                storedValueForKey:
                takeStoredValue:forKey:
                valueForKey:
                takeValue:forKey:
                To use added method.
        * Source/NSObjCRuntime.m:
               o added NSAssert in GSGetInstanceVariable() and 
                 GSSetInstanceVariable()
	* Headers/gnustep/base/NSKeyValueCoding: 
               o added:
                _infoForInstanceVariableNamed:retType:retSize:retOffset:
                _getValueForKey:selector:type:size:offset:
                _setValueForKey:object:selector:type:size:offset:
                _handleQueryWithUnboundKey:
                _handleTakeValue:forUnboundKey:

Sat Feb  9 01:45:48 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBundle.m ([+bundleForTool:]): Removed.  We switch to a
	better API, which is to have a tool use +mainBundle, in the same
	way as applications do, to retrieve the main resource bundle for
	itself.
	([+mainBundle]): Modified to support tools as well as
	applications.
	* Headers/gnustep/base/NSBundle.h ([+bundleForTool:]): Removed.
	
2002-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSTask.h: New method -validatedLaunchPath to
	check that an executable exists at the specified path or any
	alternative version corresponding to host, OS, and library-combo
	directories.  Returns the actual path to the binary.
	* Source/NSTask.m: Implemented new mathod and added autogsdoc
	comments.